--- a/css/estilos.css
+++ b/css/estilos.css
@@ -25,7 +25,7 @@ a:link, a:visited, a:active {
 /*Pie de pagina*/
 #pie-conteiner{
     background-color: rgba(255, 255, 255, 0.069);
-    margin: 1rem;
+    margin: 0.5rem;
 }
 .pie-de-pagina{
     padding: 1rem;
@@ -75,145 +75,69 @@ color: rgba(140, 170, 166, 0.938);
 #banner{
     background-color: rgba(255, 255, 255, 0.069);
 }
-.navbar-text{
-    color: rgba(255, 255, 255, 0.745);
-}
 
 #banner-text{
+    color: white;
     display: flex;
     justify-content: center;
 }
-/*Registrarse*/
-.ingresg{
-    height: 100%;
-    width: auto;
-    display: grid;
-    grid-template-areas:"encabezado encabezado"
-                        "nav nav"
-                        "ingresar registrarse"
-                        "pie-de-pagina pie-de-pagina" ;
-                        grid-template-rows: 15% 10% 70% 5%;
-                        grid-template-columns: 1fr 1fr;
-    gap: 5px;
+.navbar-text{
+    color: white;
 }
+/*Registrarse*/
 
-.ingresar {
-    grid-area: ingresar;
+.form-ingresg {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    justify-self: center;
-    width: 600px;
-    height: 100%;
     max-width: 600px;
     color: rgba(255, 255, 255, 0.902);
     background-color:rgb(83, 124, 133);
     border-radius: 1em;
-    box-shadow: 1px 1px 1px 1px grey;
 }
 
-.ingresar li{
-    text-align: center;
-    padding: 5px;
-    list-style: none;
-}
-
-.ingresar input{
+.form-ingresg input{
     border: 0;
     border-radius: 1em;
-    padding: 5px;
     background-color: rgb(212, 245, 245);
 }
-.ingresar .botones input{
-    border: thin;
-}
-.registrarse {
-    grid-area: registrarse;
+
+.form-registrarse {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100%;
-    justify-self: center;
-    width: 600px;
     background-color: rgba(47, 108, 108, 0.741);
     max-width: 600px;
     border-radius: 1em;
-    box-shadow: 1px 1px 1px 1px grey;
 }
 
-.registrarse li {
-    color: rgb(249, 254, 255);
-    list-style: none;
-    padding: 5px;
-}
-.registrarse input {
+.form-registrarse input {
     border: 0;
     border-radius: 1em;
     padding: 5px;
     background-color: rgba(152, 214, 214, 0.939);
 }
-.registrarse .botones input{
-    border: thin;
-    margin-bottom: 5px;
-}
-/*Contacto*/
-.contacto-body{
-    height: 100%;
-    width: auto;
-    display: grid;
-    grid-template-areas:"encabezado encabezado"
-                        "nav nav"
-                        "banner banner"
-                        "contacto contacto"
-                        "pie-de-pagina pie-de-pagina" ;
-    gap: 5px;
-}
 
-.contacto {   
-    grid-area: contacto; 
+/*Contacto*/
+
+#contacto {   
     display: flex;
     flex-direction: column;
     align-items: center;
     color: white;
     background-color: rgba(112, 182, 182, 0.466);
-    border-radius: 1em;
-    padding: 20px;
-}
 
-.banner {
-    grid-area: banner;
-    text-align: center;
-    background-color: rgba(112, 182, 182, 0.466);
-    color: white;
-    border-radius: 1em ;
-    padding: 10px;
-}
-.banner h2{
-    font-weight: 140%;
-}
-
-.contacto .botones input{
-    border: 0;
-    border-radius: 1em;
-    color: white;
-    background-color: rgb(93, 146, 146);
-    border: thin black;
 }
 
 .contacto input {
-    border: 0;
     border-radius: 1em;
-    padding: 7px;
-    margin: 5px;
     background-color: rgb(103, 149, 149);
 }
 
-.consulta textarea{
-    border: 0;
+#consulta{
     border-radius: 1em;
-    background-color: rgb(93, 141, 141);
 }
 
 /*Orientacion*/
