--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,12 +1,17 @@
-
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 body{
     list-style: none;
     background-image: url(../multimedia/6173954.jpg);
     background-position:center;
+    background-size:100%;
     background-color: rgba(225, 238, 239, 0.732);
     opacity: 95%;
     height: 100vh;
-    height: 100%;
+    width:auto;
 }
 a:link, a:visited, a:active {
     text-decoration:none;
