--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,7 +3,7 @@ body{
     list-style: none;
     background-image: url(../multimedia/6173954.jpg);
     background-position:center;
-    background-size:contain;git 
+    background-size:contain;
     opacity: 95%;
     height: 100vh;
 }
