--- a/scss/partials/_body.scss
+++ b/scss/partials/_body.scss
@@ -3,9 +3,15 @@ body{
     background-image: url(../multimedia/6173954.jpg);
     background-position:center;
     background-size:contain;
-    opacity: 95%;
-    height: 100vh;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 a:link, a:visited, a:active {
     text-decoration:none;
 }
+
+html {
+    height: 100%;
+}
+
