--- a/scss/style.css
+++ b/scss/style.css
@@ -26,8 +26,8 @@ html {
 #navbar {
   background-color: rgb(84, 134, 134);
 }
-#navbar img {
-  margin-bottom: 10px;
+#navbar h1 {
+  color: rgba(255, 255, 255, 0.949);
 }
 
 /*Pie de pagina*/
@@ -56,10 +56,19 @@ html {
 }
 
 .carousel-inner {
-  max-height: 700px;
+  max-height: 900px;
 }
 .carousel-inner #card img {
   height: 20rem;
+}
+
+.quienes-somos {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.quienes-somos .quienes-somos-texto {
+  width: 60%;
 }
 
 /*Buscar*/
@@ -88,7 +97,10 @@ html {
 }
 
 /*Registrarse*/
-.form-ingresg {
+#ingresar {
+  display: flex;
+}
+#ingresar .form-ingresg {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -98,9 +110,9 @@ html {
   border-radius: 1em;
   background-color: rgb(84, 134, 134);
   color: rgba(255, 255, 255, 0.902);
-  max-width: 600px;
+  width: 600px;
 }
-.form-ingresg input {
+#ingresar .form-ingresg input {
   border: 0;
   border-radius: 1em;
   background-color: rgb(212, 245, 245);
@@ -117,7 +129,7 @@ html {
   border-radius: 1em;
   background-color: rgba(47, 108, 108, 0.741);
   color: rgba(255, 255, 255, 0.902);
-  max-width: 600px;
+  width: 600px;
 }
 .form-registrarse input {
   border: 0;
