--- a/scss/style.scss
+++ b/scss/style.scss
@@ -49,7 +49,13 @@
     flex-direction: column;
     align-items: center;
 .quienes-somos-texto{
-    width:60%;
+    width:80%;
+    font-size: 180%;
+    @media screen and (max-width: 1080px) {
+    width: 95%;
+    font-size: 110%;
+    
+    }
 }
 }
 
