--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -2,4 +2,4 @@ $navbar-color : rgb(84, 134, 134);
 $fondo-tranparente : rgba(255, 255, 255, 0.069) ;
 $color-input : rgb(212, 245, 245);
 $rounded : 1em;
-
+$color-parrafo:rgba(179, 209, 214, 0.833);
