correcciones para re entrega final

--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -1,5 +1,8 @@
 $navbar-color : rgb(84, 134, 134);
-$fondo-tranparente : rgba(255, 255, 255, 0.069) ;
+$fondo-tranparente : rgba(255, 255, 255, 0.069);
 $color-input : rgb(212, 245, 245);
 $rounded : 1em;
-$color-parrafo:rgba(179, 209, 214, 0.833);
+$color-parrafo: rgba(179, 209, 214, 0.833);
+$color-botonPositivo : rgb(5, 164, 172);
+$color-botonNegativo : rgba(0, 0, 0, 0.441);
+$color-botonAlternativo : rgb(173, 238, 248);
