--- a/scss/partials/_body.scss
+++ b/scss/partials/_body.scss
@@ -1,17 +1,20 @@
-body{
+body {
     list-style: none;
     background-image: url(../multimedia/6173954.jpg);
-    background-position:center;
-    background-size:contain;
+    background-position: center;
+    background-size: contain;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    font-family: 'Josefin Sans', sans-serif;
 }
-a:link, a:visited, a:active {
-    text-decoration:none;
+
+a:link,
+a:visited,
+a:active {
+    text-decoration: none;
 }
 
 html {
     height: 100%;
 }
-
