--- a/scss/style.css
+++ b/scss/style.css
@@ -6,9 +6,12 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  font-family: "Josefin Sans", sans-serif;
 }
 
-a:link, a:visited, a:active {
+a:link,
+a:visited,
+a:active {
   text-decoration: none;
 }
 
@@ -33,6 +36,7 @@ html {
   color: rgb(216, 222, 225);
 }
 #navbar h1 {
+  font-family: "Dancing Script", cursive;
   color: rgba(255, 255, 255, 0.949);
 }
 #navbar #navbarSupportedContent {
@@ -82,6 +86,15 @@ html {
     padding-bottom: 2%;
   }
 }
+#card-index .card-body h1 {
+  font-family: "Dancing Script", cursive;
+}
+#card-index .card-body span {
+  font-family: "Dancing Script", cursive;
+}
+#card-index .card-body #boton-2 {
+  color: rgb(173, 238, 248);
+}
 
 .carousel-inner {
   max-height: 900px;
@@ -108,6 +121,14 @@ html {
 }
 
 /*Buscar*/
+#card {
+  background-color: rgba(255, 255, 255, 0);
+  color: rgba(140, 170, 166, 0.938);
+}
+#card img {
+  height: 20rem;
+}
+
 .buscadorlateral {
   background-color: rgb(84, 134, 134);
   color: rgb(255, 255, 255);
@@ -123,13 +144,8 @@ html {
     min-width: 50%;
   }
 }
-
-#card {
-  background-color: rgba(255, 255, 255, 0);
-  color: rgba(140, 170, 166, 0.938);
-}
-#card img {
-  height: 20rem;
+.buscadorlateral #boton-3 {
+  color: rgba(0, 0, 0, 0.441);
 }
 
 /*Registrarse*/
@@ -154,6 +170,9 @@ html {
   background-color: rgb(212, 245, 245);
   padding: 5px;
 }
+#ingresar #boton-3 {
+  color: rgba(0, 0, 0, 0.441);
+}
 
 .form-registrarse {
   display: flex;
@@ -173,6 +192,9 @@ html {
   background-color: rgb(212, 245, 245);
   padding: 5px;
 }
+.form-registrarse #boton-3 {
+  color: rgba(0, 0, 0, 0.441);
+}
 
 /*Contacto*/
 .contacto {
@@ -188,6 +210,9 @@ html {
   border: none;
   border-radius: 1em;
 }
+.contacto #boton-3 {
+  color: rgba(0, 0, 0, 0.441);
+}
 
 #banner {
   background-color: rgba(255, 255, 255, 0.069);
@@ -200,30 +225,30 @@ html {
 }
 
 /*Orientacion*/
-.Introduccion {
+.introduccion {
   background-color: rgba(255, 255, 255, 0.069);
   color: white;
   text-align: center;
   padding: 10px;
 }
-.Introduccion p {
+.introduccion p {
   margin: 20px;
   color: rgba(179, 209, 214, 0.833);
   font-size: 140%;
 }
 @media screen and (max-width: 1080px) {
-  .Introduccion p {
+  .introduccion p {
     font-size: 110%;
   }
 }
 
-#Psicotarjeta {
+#psicotarjeta {
   justify-self: center;
   border-radius: 1em;
   background-color: rgb(84, 134, 134);
   overflow: hidden;
 }
-#Psicotarjeta .portadapsic {
+#psicotarjeta .portadapsic {
   display: flex;
   flex-direction: none;
   align-items: center;
@@ -232,12 +257,12 @@ html {
   background-color: rgb(84, 134, 134);
   color: none;
 }
-#Psicotarjeta .portadapsic img {
+#psicotarjeta .portadapsic img {
   width: 350px;
   height: 300px;
   overflow: hidden;
 }
-#Psicotarjeta .infopsic {
+#psicotarjeta .infopsic {
   display: flex;
   flex-direction: column;
   align-items: none;
@@ -249,14 +274,14 @@ html {
   overflow: hidden;
   text-align: center;
 }
-#Psicotarjeta .infopsic h3 {
+#psicotarjeta .infopsic h3 {
   margin: 20px;
 }
-#Psicotarjeta:hover div.portadapsic {
+#psicotarjeta:hover div.portadapsic {
   width: 0px;
   height: 0px;
 }
-#Psicotarjeta:hover div.infopsic {
+#psicotarjeta:hover div.infopsic {
   height: 300px;
   animation: fadeInAnimation ease 1s;
 }
@@ -269,11 +294,11 @@ html {
   }
 }
 @media screen and (max-width: 1080px) {
-  #Psicotarjeta:active div.portadapsic {
+  #psicotarjeta:active div.portadapsic {
     width: 0px;
     height: 0px;
   }
-  #Psicotarjeta:active div.infopsic {
+  #psicotarjeta:active div.infopsic {
     height: 500px;
     animation: fadeInAnimation ease 1s;
   }
